--- a/Jaeger.Example.WinApp/Jaeger.Example.WinApp.csproj
+++ b/Jaeger.Example.WinApp/Jaeger.Example.WinApp.csproj
@@ -60,11 +60,11 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Helpers\AsyncFormEventBus.cs" />
-    <Compile Include="Helpers\DataModels.cs" />
+    <Compile Include="Helpers\MyLocalSpan.cs" />
     <Compile Include="Helpers\DemoHelper.cs" />
     <Compile Include="Helpers\JaegerFactory.cs" />
     <Compile Include="Helpers\MyLocalReporter.cs" />
-    <Compile Include="Helpers\MyLocalSpanCache.cs" />
+    <Compile Include="Helpers\MyLocalSpanConvert.cs" />
     <Compile Include="Helpers\MyLogHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
