--- a/Jaeger.Example.Monitor/Jaeger.Example.Monitor.csproj
+++ b/Jaeger.Example.Monitor/Jaeger.Example.Monitor.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=2.2.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Extensions.Logging.Abstractions.2.2.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -56,6 +59,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\MyFactory.cs" />
+    <Compile Include="Helpers\MyLoggerFactory.cs" />
+    <Compile Include="Helpers\MyLogHelper.cs" />
     <Compile Include="Jaegers\EnvVarHelper.cs" />
     <Compile Include="Jaegers\JaegerEnv.cs" />
     <Compile Include="Jaegers\JaegerRunner.cs" />
@@ -91,6 +96,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -103,6 +109,10 @@
     <ProjectReference Include="..\Jaeger.MySpans\Jaeger.MySpans.csproj">
       <Project>{7813389e-909e-473c-af16-424fd0e8458e}</Project>
       <Name>Jaeger.MySpans</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\Jaeger.Thrift\Jaeger.Thrift.csproj">
+      <Project>{f9ec3615-1d62-4ad3-8e55-0d9ce517a6c6}</Project>
+      <Name>Jaeger.Thrift</Name>
     </ProjectReference>
     <ProjectReference Include="..\src\Jaeger\Jaeger.csproj">
       <Project>{aba4f1b1-f6d0-40a9-904b-efa98a4c0411}</Project>
