--- a/Jaeger.MySpans/Jaeger.MySpans.csproj
+++ b/Jaeger.MySpans/Jaeger.MySpans.csproj
@@ -37,8 +37,12 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="OpenTracing">
+      <HintPath>C:\Users\congzw\.nuget\packages\opentracing\0.12.0\lib\netstandard2.0\OpenTracing.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,8 +54,11 @@
     <Compile Include="Common\AppDomainExtensions.cs" />
     <Compile Include="Common\JsonExtensions.cs" />
     <Compile Include="Common\JsonFileHelper.cs" />
+    <Compile Include="Common\ReflectHelper.cs" />
     <Compile Include="Common\StringLogExtensions.cs" />
+    <Compile Include="MySpans\MockTracerFactory.cs" />
     <Compile Include="MySpans\MySpanConvert.cs" />
+    <Compile Include="MySpans\MySpanLoader.cs" />
     <Compile Include="MySpans\MySpanRecorder.cs" />
     <Compile Include="MySpans\MySpanReporter.cs" />
     <Compile Include="MySpans\MySpans.cs" />
@@ -59,6 +66,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\src\Jaeger.Thrift\Jaeger.Thrift.csproj">
+      <Project>{f9ec3615-1d62-4ad3-8e55-0d9ce517a6c6}</Project>
+      <Name>Jaeger.Thrift</Name>
+    </ProjectReference>
     <ProjectReference Include="..\src\Jaeger\Jaeger.csproj">
       <Project>{aba4f1b1-f6d0-40a9-904b-efa98a4c0411}</Project>
       <Name>Jaeger</Name>
